# PDFSurgeon

./: .dockerignore  .replit  Dockerfile  LOCAL_SETUP.md  README.md  RENDER_DEPLOYMENT.md  TECH_STACK.md  app.py  models.py  pyproject.toml  render.yaml  replit.md  requirements.txt
.local/state/replit/agent/: .latest.json  progress_tracker.md
instance/: pdfsurgeon.db
static/css/: custom.css
static/js/: main.js  share.js  tools.js
templates/: base.html  compress.html  convert.html  index.html  merge.html  rotate.html  secure.html  share.html  split.html  tools.html
templates/auth/: login.html  register.html
templates/errors/: 404.html  500.html
templates/shared/: access.html  expired.html  password.html
utils/: __init__.py  file_converter.py  file_handler.py  pdf_processor.py  pdf_tools.py  qr_generator.py
