[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pdf2docx>=0.5.8",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "python-pptx>=1.0.2",
    "reportlab>=4.4.3",
    "werkzeug>=3.1.3",
]
